# componentize-js

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  init.wit
examples/cli/: README.md  app.js
examples/http/: README.md  app.js  sha256.js
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: codegen.rs  command.rs  globals.js  lib.rs  main.rs  tests.js  tests.rs  tests.wit
tests/: examples.rs
