[package]
name = "componentize-js"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.1"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
wasm-encoder = "0.244.0"
# TODO: switch to upstream release once
# https://github.com/bytecodealliance/wasmtime/pull/12540 is merged and
# released:
wasmtime = { git = "https://github.com/dicej/wasmtime", rev = "4856b557" }
wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", rev = "4856b557" }
wasmtime-wizer = { git = "https://github.com/dicej/wasmtime", rev = "4856b557", features = ["component-model", "wasmtime"] }
wit-component = "0.244.0"
wit-dylib = "0.244.0"
wit-parser = "0.244.0"
zstd = "0.13.3"

[workspace]
members = ["runtime"]

[build-dependencies]
anyhow = "1.0.100"
wasm-encoder = "0.244.0"
wasmparser = "0.244.0"
zstd = "0.13.3"

