[package]
name = "componentize-js"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.1"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
# TODO: switch to upstream release once
# https://github.com/bytecodealliance/wasmtime/pull/12540 is merged and
# released:
wasmtime = { git = "https://github.com/dicej/wasmtime", rev = "4856b557" }
wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", rev = "4856b557" }
wasmtime-wizer = { git = "https://github.com/dicej/wasmtime", rev = "4856b557", features = ["component-model", "wasmtime"] }
# TODO: open a PR and switch back to upstream:
wasm-encoder = { git = "https://github.com/dicej/wasm-tools", rev = "54ef27de" }
wit-component = { git = "https://github.com/dicej/wasm-tools", rev = "54ef27de" }
wit-dylib = { git = "https://github.com/dicej/wasm-tools", rev = "54ef27de" }
wit-parser = { git = "https://github.com/dicej/wasm-tools", rev = "54ef27de" }
zstd = "0.13.3"
heck = "0.5.0"
clap = { version = "4.6.0", features = ["derive"] }
clap_derive = "4.6.0"
indexmap = "2.13.0"

[workspace]
members = ["runtime"]

[build-dependencies]
anyhow = "1.0.100"
# TODO: open a PR and switch back to upstream:
wasm-encoder = { git = "https://github.com/dicej/wasm-tools", rev = "54ef27de" }
wasmparser = { git = "https://github.com/dicej/wasm-tools", rev = "54ef27de" }
zstd = "0.13.3"

[dev-dependencies]
futures = "0.3.32"
hex = "0.4.3"
proptest = "1.10.0"
rand = "0.10.0"
wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", rev = "4856b557", features = ["p3"] }
