[package]
name = "componentize-js-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.100"
mozjs = { path = "../../mozjs/mozjs", default-features = false, features = ["libz-sys"] }
wit-bindgen = { version = "0.52.0", default-features = false, features = ["macros", "realloc"] }
# TODO: switch to a release when available:
wit-dylib-ffi = { git = "https://github.com/dicej/wasm-tools", rev = "b072b0ca", features = ["async-raw"] }
