[package]
name = "componentize-js-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.100"
heck = "0.5.0"
# TODO: upstream patch(es) (or figure out how live without them) and switch this dep to upstream
mozjs = { git = "https://github.com/dicej/mozjs", rev = "e2192ed1", default-features = false, features = ["libz-sys"] }
wit-bindgen = { version = "0.52.0", default-features = false, features = ["macros", "realloc"] }
# TODO: switch to a release when available:
wit-dylib-ffi = { git = "https://github.com/dicej/wasm-tools", rev = "b072b0ca", features = ["async-raw"] }
